temp fix for collapsed container height when there is nothing

--- a/app/assets/stylesheets/config/_base.scss
+++ b/app/assets/stylesheets/config/_base.scss
@@ -2,3 +2,7 @@ a:hover {
   text-decoration: none;
   color: inherit;
 }
+
+.container {
+  min-height: calc(100vh - 365px);
+}
